# revpi-sos-report

./: .gitlab-ci.yml  CMakeLists.txt  README.md  pyproject.toml  revpi-sos  revpi-sos-report_1.0.0.orig.tar.gz.delta  revpi-sos-report_1.0.0.orig.tar.gz.id  revpi-sos-report_1.1.0.orig.tar.gz.delta  revpi-sos-report_1.1.0.orig.tar.gz.id  revpi-sos.1  revpi-sos.1.scd  revpi-sos.8.scd
.reuse/: dep5
debian/: NEWS  changelog  control  copyright  gbp.conf  gitlab-ci.yml
plugins/: revpi-codesys.py  revpi-eep.py  revpi.py
